fix font size of breadcrumbs to be aligned for all pages

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -89,6 +89,10 @@ main.main-content-logged > div {
     font-family: 'Noto Serif JP', serif;
 }
 
+#bootstrap-overlap p {
+    margin-bottom: 0;
+}
+
 .main-header-title:hover {
     cursor: pointer;
     background-color: #49494923;
